--- a/Bonsai.Setup/Product.wxs
+++ b/Bonsai.Setup/Product.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <?define Win64="no"?>
   <?define EditorProjectPath="..\Bonsai.Editor"?>
-  <?define ResourcesPath="..\Resources"?>
+  <?define WorkflowTemplatePath="..\Bonsai.Templates\Bonsai.WorkflowTemplate"?>
   <?define ProductDisplayName="Bonsai"?>
   <?define ProductUpgradeCode="4ba318de-f0ce-4c8a-9898-0ac27ef0d0e3"?>
   <?define ProgramFilesFolder="ProgramFilesFolder"?>
@@ -17,7 +17,7 @@
     <Property Id="WixAppFolder" Value="WixPerUserFolder" />
 
     <Icon Id="Bonsai.ico" SourceFile="$(var.EditorProjectPath)\Bonsai.ico" />
-    <Icon Id="BonsaiWorkflow.ico" SourceFile="$(var.ResourcesPath)\BonsaiWorkflow.ico" />
+    <Icon Id="BonsaiWorkflow.ico" SourceFile="$(var.WorkflowTemplatePath)\__TemplateIcon.ico" />
     <Icon Id="vsix.ico" SourceFile="vsix.ico"/>
     <Property Id="ARPPRODUCTICON" Value="Bonsai.ico" />
     
