Ensure launch target starts from working folder
Fixes #501

--- a/Bonsai.Setup.Bootstrapper/Bundle.wxs
+++ b/Bonsai.Setup.Bootstrapper/Bundle.wxs
@@ -13,7 +13,7 @@
                                               LogoFile="Bonsai.png"
                                               SuppressOptionsUI="no"
                                               ThemeFile="Theme\RtfTheme.xml"
-                                              LaunchTarget="[InstallFolder]Bonsai.exe"
+                                              LaunchTarget="Bonsai.exe"
                                               LaunchWorkingFolder="[InstallFolder]"/>
     </BootstrapperApplicationRef>
 
