--- a/Bonsai.Setup/Runtime.wxs
+++ b/Bonsai.Setup/Runtime.wxs
@@ -28,6 +28,7 @@
 
       <Component Id='BonsaiInstallDir' Guid='*' Win64="$(var.Win64)">
         <RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]' Name='InstallDir' Type='string' Value='[INSTALLFOLDER]' KeyPath='yes'/>
+        <RegistryValue Root='HKCU' Key='Software\Goncalo Lopes\[ProductName]' Name='InstallDir' Type='string' Value='[INSTALLFOLDER]' KeyPath='no'/>
         <util:RemoveFolderEx Property='INSTALLFOLDER' On='uninstall'/>
       </Component>
     </ComponentGroup>
