Remove VSIX template extension project
With the move to modern dotnet tooling and cross-platform development,
the VSIX template extension has become obsolete. Removing the VSIX
templates will also drastically simplify the repository layout.

Ultimately we hope this change will encourage familiarity with dotnet
tooling, which is increasingly used and works better when adding NuGet
packages with multiple package types to a project.

--- a/Bonsai.Setup/Product.wxs
+++ b/Bonsai.Setup/Product.wxs
@@ -17,8 +17,7 @@
     <Property Id="WixAppFolder" Value="WixPerUserFolder" />
 
     <Icon Id="Bonsai.ico" SourceFile="$(var.EditorProjectPath)\Bonsai.ico" />
-    <Icon Id="BonsaiWorkflow.ico" SourceFile="$(var.WorkflowTemplatePath)\__TemplateIcon.ico" />
-    <Icon Id="vsix.ico" SourceFile="vsix.ico"/>
+    <Icon Id="BonsaiWorkflow.ico" SourceFile="BonsaiWorkflow.ico" />
     <Property Id="ARPPRODUCTICON" Value="Bonsai.ico" />
 
     <Feature Id="ProductFeature" Title="Bonsai" Level="1" ConfigurableDirectory="INSTALLFOLDER">
@@ -26,10 +25,6 @@
         <ComponentGroupRef Id="ProductComponents" />
         <ComponentRef Id="Extensions" />
         <ComponentRef Id="ProgramMenuDir" />
-      </Feature>
-
-      <Feature Id="DevelopmentFeature" Title="Development" Level="1">
-        <ComponentGroupRef Id="BonsaiVsExtensions" />
       </Feature>
     </Feature>
   </Product>
