--- a/Bonsai.Setup/Runtime.wxs
+++ b/Bonsai.Setup/Runtime.wxs
@@ -3,9 +3,8 @@
      xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
   <?define Win64="no"?>
   <?define ProductDisplayName="Bonsai"?>
-  <?define Product32DisplayName="Bonsai (x86)"?>
   <?define BonsaiBuildPath="..\artifacts\bin\Bonsai\release-repacked"?>
-  <?define Bonsai32BuildPath="..\artifacts\bin\Bonsai\release"?>
+  <?define BonsaiLauncherBuildPath="..\artifacts\bin\Bonsai\release"?>
 
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
@@ -13,18 +12,15 @@
         <File Id="BonsaiEXE" Name="Bonsai.exe" Source="$(var.BonsaiBuildPath)\Bonsai.exe" KeyPath="yes">
           <Shortcut Id="startmenuBonsai" Directory="ProgramMenuDir" WorkingDirectory="INSTALLFOLDER" Name="$(var.ProductDisplayName)" Icon="Bonsai.ico" Advertise="yes"/>
         </File>
+      </Component>
+
+      <Component Id="BonsaiLauncher" Guid="*" Win64="$(var.Win64)">
+        <File Id="BonsaiLauncherEXE" Name="BonsaiLauncher.exe" Source="$(var.BonsaiLauncherBuildPath)\BonsaiLauncher.exe" KeyPath="yes" />
         <ProgId Id='Bonsai.workflow' Description='Bonsai workflow file' Icon='BonsaiWorkflow.ico' Advertise='yes'>
           <Extension Id='bonsai' ContentType='application/xml'>
             <Verb Id='open' Command='Open' Argument='"%1"' />
           </Extension>
         </ProgId>
-      </Component>
-
-      <Component Id="Bonsai32Executable" Guid="*" Win64="$(var.Win64)">
-        <Condition>INSTALL64</Condition>
-        <File Id="Bonsai32EXE" Name="Bonsai32.exe" Source="$(var.Bonsai32BuildPath)\Bonsai32.exe" KeyPath="yes">
-          <Shortcut Id="startmenuBonsai32" Directory="ProgramMenuDir" WorkingDirectory="INSTALLFOLDER" Name="$(var.Product32DisplayName)" Icon="Bonsai.ico" Advertise="yes"/>
-        </File>
       </Component>
 
       <Component Id='BonsaiInstallDir' Guid='*' Win64="$(var.Win64)">
