--- a/Bonsai.Setup/Runtime.wxs
+++ b/Bonsai.Setup/Runtime.wxs
@@ -23,6 +23,11 @@
         <RegistryValue Root='HKCU' Key='Software\Goncalo Lopes\[ProductName]' Name='InstallDir' Type='string' Value='[INSTALLFOLDER]' KeyPath='no'/>
         <util:RemoveFolderEx Property='INSTALLFOLDER' On='uninstall'/>
       </Component>
+
+      <Component Id='BonsaiEnvironment' Guid='a18f4c31-3892-4999-bb5d-e2277863246a' Win64="$(var.Win64)" KeyPath="yes">
+        <Condition>(ADDPATH="1")</Condition>
+        <Environment Id="PATH" Name="PATH" Value="[INSTALLFOLDER]" Action="set" Part="last" System="no" />
+      </Component>
     </ComponentGroup>
   </Fragment>
 </Wix>
