--- a/Bonsai.Setup.Bootstrapper/Bundle.wxs
+++ b/Bonsai.Setup.Bootstrapper/Bundle.wxs
@@ -24,6 +24,7 @@
 
     <Variable Name="BonsaiDisplayVersion" Type="string" Value="$(var.BonsaiDisplayVersion)"/>
     <Variable Name="InstallFolder" Type="string" Value="[LocalAppDataFolder]Bonsai\"/>
+    <Variable Name="AddPathCheckbox" Type="numeric" Value="1" />
     <util:RegistrySearch Root="HKLM" Key="$(var.VCRTRegistryKey)" Value="Install" Variable="VCRTInstalled" Win64="no"/>
     <util:RegistrySearch Root="HKLM" Key="$(var.VCRTRegistryKey)" Value="Install" Variable="VCRT64Installed" Win64="yes"/>
 
