--- a/Bonsai.Setup/Runtime.wxs
+++ b/Bonsai.Setup/Runtime.wxs
@@ -18,6 +18,10 @@
         </ProgId>
       </Component>
 
+      <Component Id="NuGetConfig" Guid="*" Win64="$(var.Win64)">
+        <File Name="NuGet.config" Source="NuGet.config" KeyPath="yes" />
+      </Component>
+
       <Component Id='BonsaiInstallDir' Guid='*' Win64="$(var.Win64)">
         <RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]' Name='InstallDir' Type='string' Value='[INSTALLFOLDER]' KeyPath='yes'/>
         <RegistryValue Root='HKCU' Key='Software\Goncalo Lopes\[ProductName]' Name='InstallDir' Type='string' Value='[INSTALLFOLDER]' KeyPath='no'/>
